[package]
name = "near-sdk-sim"
version = "3.2.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "GPL-3.0"
categories = ["wasm"]
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://github.com/near/near-sdk-rs"
description = """
NEAR Simulator & cross-contract testing library
"""


[dependencies]
chrono = "0.4"
near-sdk = { path = "../near-sdk", version = "=3.1.0" }
near-crypto = { git = "https://github.com/birchmd/nearcore.git", rev = "6033903be2037d67510188450f289b2d6e033f04"}
near-primitives = { git = "https://github.com/birchmd/nearcore.git", rev = "6033903be2037d67510188450f289b2d6e033f04"}
near-vm-logic = { git = "https://github.com/birchmd/nearcore.git", rev = "6033903be2037d67510188450f289b2d6e033f04"}
near-chain-configs = { git = "https://github.com/birchmd/nearcore.git", rev = "6033903be2037d67510188450f289b2d6e033f04"}

near-pool = { git = "https://github.com/birchmd/nearcore.git", rev = "6033903be2037d67510188450f289b2d6e033f04"}
near-store = { git = "https://github.com/birchmd/nearcore.git", rev = "6033903be2037d67510188450f289b2d6e033f04"}
near-runtime = { package = "node-runtime", git = "https://github.com/birchmd/nearcore.git", rev = "6033903be2037d67510188450f289b2d6e033f04"}

lazy-static-include = "3"
# Temporary workaround see https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
fungible-token = { path="../examples/fungible-token/ft" }

[features]
default = []
no_cache = ["near-store/no_cache", "near-runtime/no_cache"]
no_sim = []
no_contract_cache = []
